# CS4700

./: .gitignore  CMakeLists.txt  Makefile  README.md  densecpu.cpp  download_and_transform_mnist.py  main.cu  results.csv  visualizer.py
dense/: Makefile  densecpu.cpp  network.h
src/: nn.cu  nn.cuh  test.cu
